app/assets/stylesheets/application.css.scss
$baseGrey: #292728;
$lightGrey: #999999;
$veryLightGrey: lighten($baseGrey, 80%);
$baseRed: #b0242f;
$lighterRed: lighten($baseRed, 20%);
$flameOrange: #FF9100;
$headingsFontFamily: 'Roboto Condensed', sans-serif;
$baseFontSize: 16px;
$baseLineHeight: 28px;
$transitionDuration: 0.05s;
$dropdownLinkBackgroundHover: $baseRed;

$navbarHeight: 90px;
$footerHeight: 240px;
$textColor: $baseGrey;

$facebookBlue: #4c66a4;
$twitterTeal: #9AE4E8;

@import "bootstrap";
@import "bootstrap-responsive";
@import "font-awesome";
@import "modules/**/*";
@import "vendor/magnific";
@import "vendor/chosen";

@font-face {
  font-family: Pigeon;
  src: font-url('Pigeon.otf') format("opentype");
}

html, body {
  height: 100%;
}

body {
  font-weight: 300;
}

h1, h2, h3 { font-weight: 700; }
h4, h5, h6 { font-weight: 300; }
h1, h2, h3, h4, h5, h6 { &.nomargin { margin-top: 0; margin-bottom: 0; } }

i[class^="icon"] {
  font-style: normal;
}

.navbar .nav > li > a[disabled] {
  color: #ccc;
  &:hover { color: #ccc; }
}

.btn.btn-mini {
  font-size: 10.5px;
  line-height: 18px;
}

.label {
  border-radius: 0;
  font-weight: 400;
  text-transform: uppercase;
}

.clearfix {
  clear: both;
}

.heading {
  font-family: $headingsFontFamily;
}

.marginfix {
  margin-bottom: 0;
}

#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto 0 -$footerHeight;
}

#push { height: $footerHeight; }
#footer { height: auto; }

#header {
  background-color: $veryLightGrey;
  border-bottom: 1px solid #ddd;

  .navbar {
    margin-bottom: 0;
  }
}

a {
  color: $lightGrey;
  &:hover { color: $baseRed; text-decoration: none; }
}

a {
  > h1, > h2, > h3 { color: $baseRed; }
}

h1, h2, h3 {
  > a { color: $baseRed; }
}

.main-content {
  margin-bottom: 40px;
}

ul.social-icons {
  margin: 0;
  padding: 0;
  float: left;

  > li {
    float: left;
    padding: 0;
    margin: 5px 5px 0 0;
    line-height: 18px;
    > a.btn { margin-top: -1px; }
  }
}

nav.navbar-inner {
  background: none;
  border: none;
  box-shadow: none;
  border-radius: 0;
  padding-left: 5px;

  a.brand {
    background-color: $baseRed;
    padding: 0;
    margin: 10px 0 0 0;
    -webkit-transition: background-color 0.3s ease;
    transition: background-color 0.3s ease;

    background-image: image-url("sword_flameless_logo.png");
    background-size: 100% 100%;
    background-repeat: no-repeat;

    width: 260px;
    height: 65px;

    &:hover {
      -webkit-transition: background-color 0.3s ease;
      transition: background-color 0.3s ease;
      background-color: $flameOrange;
    }
  }

  li.share-button {
    margin-left: 10px;
    padding-top: 5px;
  }

   > .nav {
    padding: 0;

    > li {
      display: inline-block;
      font-weight: bold;
      font-size: 16px;

      > a {
        margin-top: 15px;
        margin-bottom: 0;
        padding: 20px 15px 20px;
        font-size: 16px;
        color: $lightGrey;
        &:hover { color: $baseRed; background: none; }
      }

      &.dropdown.open {
        > .dropdown-toggle {
          background: none;
        }
      }

      ul.dropdown-menu {
        top: 80%;
        border-radius: 0;
        box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
      }
    }
  }
}

form.navbar-search, form.search-form {
  margin-bottom: 0;
  .control-group {
    display: inline-block;
    position: relative;
    > i {
      position: absolute;
      right: 10px;
      top: 10px;
      color: $veryLightGrey;
      line-height: 14px;
    }
  }
}

#home {
  .current-episode {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;

    .overlay {
      @include gradient(rgba(0,0,0,0.0) 40%, rgba(0,0,0,0.7) 100%);
      padding: 30px 0;
      height: 500px;
    };

    color: $veryLightGrey;

    .splash-logo {
      padding-top: 30px;

      > a {
        display: block;
        max-width: 376px;
        margin-left: auto;
        margin-right: auto;
      }
    }

    article.episode {
      padding: 20px 0 30px 0;

      .media-object { display: none; }
      a.action { display: none; }

      .description {
        // Force next piece of content to be same distance regardless of whether
        // episode description uses <p> or <br>.
        margin-bottom: 10px;
        p:last-child { margin: 0; }
      }

      .attribution {
        margin-bottom: 10px;
      }
    }

    .full-play-controls  {
      .share-episode { background-color: $baseGrey; }
    }
  }

  section.past-episodes {
    min-height: 400px;
    margin-bottom: 20px;
  }
}

article {
  a.action {
    background-color: $baseRed;
    color: $veryLightGrey;
    text-transform: uppercase;
    font-size: 12px;
    padding: 3px;
    margin-left: 2px;

    &:hover {
      background-color: $lightGrey;
    }
  }
}

#footer {
  color: $veryLightGrey;
  background-color: $baseGrey;

  > .container {
    padding-top: 10px;
  }

  .nav-root > li { border-bottom: 1px solid $lightGrey; color: $lightGrey; }

  .nav {
    font-size: 14px;
    line-height: 20px;
    > li > a:hover { background-color: $baseGrey; }
  }

  .brand {
    display: block;
    max-width: 125px;
    margin-left: auto;
    margin-right: auto;
  }
}

#search {
  ul.results {
    li.result {
      border-top: 1px solid #eee;
      margin-bottom: 10px;
      &:first-child { border-top: none; }
      h3, p { margin: 0; }
    }
  }
}

.row-fluid .divider {
  height: 20px;
  min-height: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid $baseRed;
}

ul.breadcrumb {
  background-color: transparent;
  margin-bottom: 0;
  padding: 0;
  a { color: $baseRed; }

  .divider {
    margin: 0;
    height: auto;
    border: none;
  }
}

.main-content {
  padding-top: 20px;
  background-color: white;
  position: relative;

  header.span12 {
    p.muted {
      margin-bottom: 0;
    }
  }
}

figure.thumbnail {
  background-color: $veryLightGrey;
  padding: 10px;
  border: 1px solid #ddd;
  margin: 0;
  border-radius: 0;

  figcaption {
    font-size: 12px;
    font-weight: 300;
    margin-top: 14px;
    line-height: 14px;
  }

  &.pull-left {
    margin-right: 20px;
    max-width: 30%;
  }
}

.affix {
  position: fixed;
  top: 20px;
}

.affix-bottom {
  position: absolute;
  bottom: 16px;
}

.top-navbar {
  .navbar-inner {
    min-height: 45px;
    background-color: #eee;
    border: 0;
    box-shadow: none;
    background-image: none;

    > .nav > li > a {
      padding: 15px 8px;
    }
  }
}

#side-navbar {
  width: 158px;

  .nav {
    li {
      font-size: 24px;
      line-height: 32px;
      padding: 4px;

      &.active a {
        color: $baseRed;
        background-color: $veryLightGrey;
      }
    }
  }
}

ul.grouped {
  $highlightColor: $veryLightGrey;

  > li {
    clear: both;
    border: 1px solid $highlightColor;
    margin-bottom: 20px;

    > h3 {
      background-color: $highlightColor;
      padding-left: 20px;
      margin-top: 0;
      margin-bottom: 0;
    }

    > .items {
      padding: 20px 20px 0 20px;
    }
  }
}

#episodes {
  .episode-and-image {
    .body {
      // Force next piece of content to be same distance regardless of whether
      // episode description uses <p> or <br>.
      margin-bottom: 14px;
      p:last-child { margin: 0; }
    }
  }

  .other-episodes {
    a {
      padding: 30px;
      display: block;
      font-family: $headingsFontFamily;
      font-size: 180%;

      &.next { text-align: right; }
      &:hover {
        @include transition(all 0.4s ease);
        background-color: #ddd;
      }
    }
  }
}

a.brand-logo {
  display: block;
  width: 300px;
}

.header-content {
  padding: 20px 0;

  .page-header {
    display: table;
    position: relative;
    margin-bottom: 0;
    margin-top: 0;
    padding-bottom: 20px;
    border-bottom: 1px solid $baseRed;

    > .span12 {
      > .page-header-logo {
        padding-right: 20px;
        float: left;
      }

      > .page-header-title {
        position: relative;
      }

      ul.breadcrumb {
        > li { text-shadow: none; }
      }
    };

    h1 { line-height: 1.4em; }
  }
}

.entity-image {
  position: relative;
  > .thumbnail {
    position: absolute;
    top: 0;
    left: 0;
  }
}

.image-gallery a {
  display: inline-block;
  margin: 0 4px 4px 0;
}

.btn-large {
  font-family: $headingsFontFamily;
  > i { font-size: 26px; margin-right: 4px; }
}

.btn-facebook {
  @include buttonBackground($facebookBlue, darken($facebookBlue, 10%));
}

.btn-twitter {
  @include buttonBackground($twitterTeal, darken($twitterTeal, 10%));
}

.btn-primary {
  @include buttonBackground($lighterRed, darken($lighterRed, 10%));
}

.btn-appearances {
  > i { color: $lighterRed; text-shadow: 1px 0 rgba(0,0,0,0.4); margin-right: 4px; }
}

// TODO Remove after Bootstrap upgrade.
input[type='text'], input[type='email'] {
  &.input-large {
    height: 38px;
    font-size: 20px;
    padding-left: 12px;

    &.input-block-level { height: 48px; }
  }
}

.partners .partner {
  text-align: center;
  display: block;
  font-size: 10px;
}

.embed-container {
  position: relative;
  padding-bottom: 59.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
  width: 100%;
  margin-bottom: 20px;

  iframe, object embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

.mini-episode {
  margin-bottom: 20px;
  border-radius: 4px;
  background-size: cover;
  background-position: center center;

  > a {
    display: block;
    position: relative;
    border-radius: 4px;
    color: white;
    text-shadow: 0 0 0.2em black, 0 0 0.5em rgba(0,0,0,0.4);
    transition: all 0.4s ease;
    // background-color: rgba(0,0,0,0.6);

    .blurb {
      padding: 20px 20px 50% 20px;
    }

    .title {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      border-bottom-left-radius: 4px;
      border-bottom-right-radius: 4px;
      transition: all 0.4s ease;
      background-color: rgba(0,0,0,0.6);

      h3 {
        margin: 0;
        color: white;
        font-weight: 300;
        line-height: 38px;
        padding: 8px 20px;
      }
    }

    &:hover .title {
      background: none;
      transition: all 0.4s ease;
    }
  }
}

#episode-list {
  > li {
    display: inline-block;
    width: 49.5%;

    &.mix {
      opacity: 0;
      display: none;
    }
  }

  &:after {
    content: '';
    width: 100%;
    display: inline-block;
  }
}

#home.index {
  .homepage-logo {
    background-image: linear-gradient(to bottom, transparent 40%, rgba(0,0,0,0.1) 70%, rgba(0,0,0,0.2) 100%), image-url('crowd2.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: top left;

    h3 {
      max-width: 500px;
      line-height: 40px;
      color: #eee;
      font-weight: 300;
      margin-left: auto;
      margin-right: auto;
      margin-bottom: 0;
      margin-top: -20px;
      padding-bottom: 20px;
    }
  }

  .homepage-content {
    background-color: white;
    padding: 40px 0;

    &:nth-child(even)  {
      background-color: #274059;
      .post-content, a > h2 {
        color: #eee;
      }
    }

    &:nth-child(odd) {
      background-color: white;
    }
  }

  #footer {
    background-color: #292728;
  }
}

@import "application-responsive";

